Fix select icon on Safari

--- a/assets/scss/elements/_forms.scss
+++ b/assets/scss/elements/_forms.scss
@@ -46,7 +46,7 @@ $input-horizontal-spacing: var(--theme-spacing-tiny) !default; // Checkboxes and
     background-color: $input-background-color;
 
     font: inherit;
-    line-height: 1;
+    line-height: 1.5;
     -webkit-font-smoothing: initial;
 
     &:focus,
@@ -79,7 +79,10 @@ $input-horizontal-spacing: var(--theme-spacing-tiny) !default; // Checkboxes and
 
     padding-right: 3.125em;
 
-    background: $input-background-color url('assets/images/arrow-caret.svg') calc(100% - 17px) center no-repeat;
+    background-color: var(--current-light-tertiary);
+    background-image: url("assets/images/arrow-caret.svg");
+    background-position: calc(100% - 17px) center;
+    background-repeat: no-repeat;
     background-size: .56em .312em;
 
     -webkit-appearance: none;
